--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  
+  "main": "index.js",
+
   "engines": {
       "node": ">=16.x <18"
   },
