--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "main": "index.js",
-
   "engines": {
-      "node": ">=16.x <18"
+    "node": ">=16.x <18"
   },
   "dependencies": {
     "@react-pdf/renderer": "^2.2.0",
@@ -14,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "file-loader": "^6.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
